--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,38 +3,34 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+	--main-blue: #1A1365;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html {
+	min-height: 100%;
+	height: 100%;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	color: var(--main-blue);
+	display: flex;
+	flex-direction: column;
+	box-sizing: border-box;
+	overflow-x: hidden;
 }
-a.custom-btn{
-  background: #daff00;
-  color: #143142;
+
+a.custom-btn {
+	background: #daff00;
+	color: #143142;
 }
-a.custom-btn:hover, a.custom-btn:focus{
-  background: #143142;
-  color: #daff00;
+
+a.custom-btn:hover, a.custom-btn:focus {
+	background: #143142;
+	color: #daff00;
 }
+
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+	.text-balance {
+		text-wrap: balance;
+	}
 }
